# photogrammetry

./: .gitignore  README.md  Vagrantfile  deploy  photogrammetry.cabal
snaplets/fay/src/: Angular.hs  application.hs
snaplets/fay/src/Angular/: Module.hs
snaplets/fay/src/Angular/Auto/: Injector.hs
snaplets/fay/src/AngularUi/: UiRouter.hs
snaplets/haste/: AngularFileUpload.hi  AngularFileUpload.hs  AngularUi.hs  Upload.hs  application.hi  application.hs  application.js
snaplets/haste/AngularUi/: UiRouter.hi  UiRouter.hs
snaplets/haste/Controllers/: ImageUploaderController.hi  ImageUploaderController.hs
snaplets/haste/main/: AngularFileUpload.jsmod  Application.jsmod  Main.jsmod
snaplets/haste/main/AngularUi/: UiRouter.jsmod
snaplets/haste/main/Controllers/: ImageUploaderController.jsmod
snaplets/haste/main/Haste/Angular/: Ng.jsmod
snaplets/haste/src/Angular/: Module.hs
snaplets/haste/src/Angular/Ng/: Controller.hs  RootScope.hs
snaplets/haste/src/Angular/Providers/: LocationProvider.hs
src/: Application.hs  Main.hs  RouteHelpers.hs  Site.hs  Stylesheets.hs  Templates.hs  Views.hs
