name:                photogrammetry
version:             0.1
synopsis:            Project Synopsis Here
description:         Project Description Here
license:             AllRightsReserved
author:              Author
maintainer:          maintainer@example.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Flag Haste-inst
    Description: either if it is being compiled with haste-inst or with cabal
    Default: False

Executable photogrammetry
  hs-source-dirs: src
  main-is: Main.hs

--  if flag(haste-inst)
--    build-depends:
--      react-haskell             >= 1.3.0.0
--  else
  Build-depends:
  --    bytestring                >= 0.9.1   && < 0.11,
  --    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
  --    mtl                       >= 2       && < 3,
      snap                      >= 0.13    && < 0.14,
      snap-core                 >= 0.9     && < 0.10,
      snap-server               >= 0.9     && < 0.10,
      snap-loader-static        >= 0.9     && < 0.10,
      base                      >= 4,
      bytestring,
      transformers,
      text,
  --    time                      >= 1.1     && < 1.5,
  --    xmlhtml                   >= 0.1     && < 0.3,
      snaplet-haste             >= 0.1.0.0,
  --    haste-compiler,
  --    haste-jquery,
  --    haste-angular,
      blaze-html                >= 0.5,
      blaze-markup              >= 0.5,
      clay                      >= 0.10 && < 0.10.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6
--  && < 4.7

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
